* Bug #35781: Improved handling when installing on unreachable hosts; do not only find hosts which provide LDAP service
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54026 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (4.1.2-2) unstable; urgency=low
+
+  * Bug #35781: Improved handling when installing on unreachable hosts; do not
+    only find hosts which provide LDAP service
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 29 Sep 2014 17:25:58 +0200
+
 univention-management-console-module-appcenter (4.1.2-1) unstable; urgency=medium
 
   * Bug #35654: add category color to app gallery items
