--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.3-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 18:20:23 +0200
+
 univention-management-console-module-appcenter (4.1.2-2) unstable; urgency=low
 
   * Bug #35781: Improved handling when installing on unreachable hosts; do not
