--- a/base/univention-firewall/debian/changelog
+++ b/base/univention-firewall/debian/changelog
@@ -1,3 +1,9 @@
+univention-firewall (7.0.0-3) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 19:29:43 +0200
+
 univention-firewall (7.0.0-2) unstable; urgency=low
 
   * fixed XS-Python-Version (Bug #35138) 
