--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.2-1) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 19:28:44 +0200
+
 univention-printserver (8.0.1-2) unstable; urgency=medium
 
   * New UCR Variable samba/force_printername (Bug #33505)
