--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-18) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 19:37:47 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-17) unstable; urgency=low
 
   * Improved UMC wizard texts, added translations (Bug #35991)
