* Bug #35654: version bump
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54035 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/npm/debian/changelog
+++ b/management/npm/debian/changelog
@@ -1,3 +1,9 @@
+npm (0.0.2-3) unstable; urgency=low
+
+  * Bug #35654: version bump
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 19:57:14 +0200
+
 npm (0.0.2-2) unstable; urgency=low
 
   * Bug #35822: Adapted the npm copyright information
