--- a/management/stylus/debian/changelog
+++ b/management/stylus/debian/changelog
@@ -1,3 +1,9 @@
+stylus (0.0.0-12) unstable; urgency=low
+
+  * Bug #35654: version bump
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 20:08:09 +0200
+
 stylus (0.0.0-11) unstable; urgency=low
 
   * Bug #35823: Adapted symlink and stylus.install
