--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.23-1) unstable; urgency=medium
+
+  * Bug #35654: add icon rules with hover/active states
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 29 Sep 2014 20:54:11 +0200
+
 univention-management-console-frontend-theme (0.0.22-1) unstable; urgency=medium
 
   * [WIP] Bug #35654: fix header elements in height, padding etc.
