--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.17-1) unstable; urgency=medium
+
+  * Bug #35654: adjust icon classes
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 29 Sep 2014 20:54:53 +0200
+
 univention-management-console-frontend (4.1.16-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
