--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.2-2) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 09:24:06 +0200
+
 univention-printserver (8.0.2-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
