--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.5-1) unstable; urgency=low
+
+  * Bug #35654: cleanup of umc module templates and dh-umc-build
+
+ -- Florian Best <best@univention.de>  Mon, 29 Sep 2014 20:47:08 +0200
+
 univention-management-console (7.1.4-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
