fixed get_root_certificate (Bug #35855)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54055 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (2.0.1-5) unstable; urgency=low
+
+  * fixed get_root_certificate (Bug #35855) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 30 Sep 2014 12:53:39 +0200
+
 ucs-windows-tools (2.0.1-4) unstable; urgency=low
 
   * fixed missing "self." in winexe.py(Bug #35855)
