Bug #33844 kernel: Remove ipw2x00 & ivtv firmware
Both require manual user interaction to accept the licence.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54056 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (8.0.2-3) unstable; urgency=low
+
+  * Bug #33844: Remove ipw2x00 & ivtv firmware because of interactive licence
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 30 Sep 2014 13:22:52 +0200
+
 univention-kernel-image (8.0.2-2) unstable; urgency=low
 
   * Bug #33844: Re-add firmware packages as recommends
