--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.23-2) unstable; urgency=medium
+
+  * Bug #35654: adjust package dependencies file to allow updates from UCS 3.x
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 30 Sep 2014 14:04:09 +0200
+
 univention-management-console-frontend-theme (0.0.23-1) unstable; urgency=medium
 
   * Bug #35654: add icon rules with hover/active states
