--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.2-1) unstable; urgency=low
+
+  * Bug #35654: show (save/back) buttons in the module header
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 14:09:42 +0200
+
 univention-management-console-module-udm (5.1.1-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
