--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.24-1) unstable; urgency=low
+
+  * Bug #35654: module header button styling
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 14:16:30 +0200
+
 univention-management-console-frontend-theme (0.0.23-2) unstable; urgency=medium
 
   * Bug #35654: adjust package dependencies file to allow updates from UCS 3.x
