--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.25-1) unstable; urgency=medium
+
+  * Bug #35654: change order of Grid.css include to avoid import problems
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 30 Sep 2014 14:20:23 +0200
+
 univention-management-console-frontend-theme (0.0.24-1) unstable; urgency=low
 
   * Bug #35654: module header button styling
