* Bug #35654: fix last commit
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54061 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.6-1) unstable; urgency=low
+
+  * Bug #35654: fix last commit
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 14:20:57 +0200
+
 univention-management-console (7.1.5-1) unstable; urgency=low
 
   * Bug #35654: cleanup of umc module templates and dh-umc-build
