--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.18-1) unstable; urgency=low
+
+  * Bug #35654: add headerButtons of module child to the module header
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 14:22:55 +0200
+
 univention-management-console-frontend (4.1.17-1) unstable; urgency=medium
 
   * Bug #35654: adjust icon classes
