* Bug #35654: fix tools.getIconClass (backwards compatibility)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54066 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.19-1) unstable; urgency=low
+
+  * Bug #35654: fix tools.getIconClass (backwards compatibility)
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 15:03:40 +0200
+
 univention-management-console-frontend (4.1.18-1) unstable; urgency=low
 
   * Bug #35654: add headerButtons of module child to the module header
