--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (7.1.7-1) unstable; urgency=low
+
+  * Bug #35654: fix msgmerge in dh_umc.py if some UMC XML file doesn't define
+  	<description> or similar
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 16:12:23 +0200
+
 univention-management-console (7.1.6-1) unstable; urgency=low
 
   * Bug #35654: fix last commit
