--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.0-19) unstable; urgency=low
+
+  * Fixed wrong TextBox sizes due to unnecessary
+    double form definition (Bug #35945)
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 30 Sep 2014 16:40:35 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-18) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
