* Bug #35654: reset priority of modules; fix translations
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54075 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/de.po
+++ b/base/univention-system-setup/umc/de.po
@@ -37,8 +37,8 @@ msgid "Basic settings"
 msgstr "Basis-Einstellungen"
 
 #: umc/setup.xml: 24
-msgid "Define host and domain names, ldap base  and set the root password"
-msgstr "Setzen von Rechner- und Domänennamen, der LDAP-Basis und des root Passworts"
+msgid "Define hostname, domainname and set the root password"
+msgstr "Setzen von Rechner- und Domänennamen und des root Passworts"
 
 #: umc/setup.xml: 28
 msgid "Certificate settings"
