--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.2-2) unstable; urgency=low
+
+  * Bug #35654: reset priority of modules; fix translations
+
+ -- Florian Best <best@univention.de>  Tue, 30 Sep 2014 17:22:24 +0200
+
 univention-system-setup (8.1.2-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions 
