--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.5-1) unstable; urgency=medium
+
+  * Bug #35654: fix refresh on start up, change category
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 30 Sep 2014 18:18:55 +0200
+
 univention-updater (10.0.4-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
