--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.3-2) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 01 Oct 2014 00:40:40 +0200
+
 univention-management-console-module-appcenter (4.1.3-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
