--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.3-1) unstable; urgency=low
+
+  * Bug #33397: Install univention-grub before USS
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 01 Oct 2014 10:45:55 +0200
+
 univention-system-setup (8.1.2-2) unstable; urgency=low
 
   * Bug #35654: reset priority of modules; fix translations
