* Make instance detail page work with new UMC design (Bug #35945)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54086 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-20) unstable; urgency=low
+
+  * Make instance detail page work with new UMC design (Bug #35945) 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 01 Oct 2014 11:34:15 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-19) unstable; urgency=low
 
   * Fixed wrong TextBox sizes due to unnecessary
