* Bug #35654: fix set(visible) of some widgets * fix encoding of feedback body * remove obsolete things
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54087 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (4.1.21-1) unstable; urgency=low
+
+  * Bug #35654: fix set(visible) of some widgets
+  * fix encoding of feedback body
+  * remove obsolete things
+
+ -- Florian Best <best@univention.de>  Wed, 01 Oct 2014 11:36:08 +0200
+
 univention-management-console-frontend (4.1.20-1) unstable; urgency=medium
 
   * Bug #35654: fix handling of containerNode in Module class
