db5.1 for bdb backend (Bug #35697)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54088 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.4-1) unstable; urgency=low
+
+  * db5.1 for bdb backend (Bug #35697)
+
+ -- Felix Botner <botner@univention.de>  Wed, 01 Oct 2014 11:50:10 +0200
+
 univention-ldap (11.0.3-1) unstable; urgency=medium
 
   * Call samba-ad-dc init script instead of samba4 (Bug #35319)
