--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.22-1) unstable; urgency=medium
+
+  * Bug #35654: minor fixes for LabelPane
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 01 Oct 2014 12:19:32 +0200
+
 univention-management-console-frontend (4.1.21-1) unstable; urgency=low
 
   * Bug #35654: fix set(visible) of some widgets
