* Bug #34765: fix some translations / fuzzies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54094 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-diagnostic (1.0.3-2) unstable; urgency=low
+
+  * Bug #34765: fix some translations / fuzzies
+
+ -- Florian Best <best@univention.de>  Wed, 01 Oct 2014 12:50:09 +0200
+
 univention-management-console-module-diagnostic (1.0.3-1) unstable; urgency=low
 
   * Bug #34765: rewrite
