--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (7.1.7-2) unstable; urgency=low
+
+  * Bug #34765: add univention-management-console-module-diagnostic to the
+  	recommended UMC modules
+
+ -- Florian Best <best@univention.de>  Wed, 01 Oct 2014 13:05:44 +0200
+
 univention-management-console (7.1.7-1) unstable; urgency=low
 
   * Bug #35654: fix msgmerge in dh_umc.py if some UMC XML file doesn't define
