--- a/services/univention-sasl/debian/changelog
+++ b/services/univention-sasl/debian/changelog
@@ -1,3 +1,9 @@
+univention-sasl (3.0.0-1) unstable; urgency=low
+
+  * update to UCS 4.0 (Bug #35264) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 01 Oct 2014 13:49:17 +0200
+
 univention-sasl (2.0.0-1) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
