* Bug #35654: move module into domain category
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54102 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (9.0.3-1) unstable; urgency=low
+
+  * Bug #35654: move module into domain category
+
+ -- Florian Best <best@univention.de>  Wed, 01 Oct 2014 13:52:13 +0200
+
 univention-ad-connector (9.0.2-1) unstable; urgency=medium
 
   * Feedback from QA (Bug #35602)
