--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (2.0.2-1) unstable; urgency=low
+
+  * Bug #35654: move module into domain category
+
+ -- Florian Best <best@univention.de>  Wed, 01 Oct 2014 13:53:15 +0200
+
 univention-management-console-module-adtakeover (2.0.1-3) unstable; urgency=medium
 
   * Rename sysvol domain directory to AD spelling (Bug #35769)
