* 13_indirect_group_user_memberships_file_access: give the group cache   more time (Bug #36036)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54106 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5,0.14-1) unstable; urgency=low
+
+  * 13_indirect_group_user_memberships_file_access: give the group cache
+    more time (Bug #36036)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 01 Oct 2014 15:02:19 +0200
+
 ucs-test (5.0.13-1) unstable; urgency=low
 
   * Bug #35877: adding new modules path to the test script.
