--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (7.0.0-2) unstable; urgency=low
+
+  * added ucr template for /etc/default/cyrus-imapd (Bug #35264) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 01 Oct 2014 15:17:57 +0200
+
 univention-mail-cyrus (7.0.0-1) unstable; urgency=medium
 
   * Update to UCS 4.0 (Bug #35264)
