added ucr header, create cyrus dirs during installation (Bug #35264)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54109 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (7.0.0-3) unstable; urgency=low
+
+  * added ucr header, create cyrus dirs during installation (Bug #35264)
+
+ -- Felix Botner <botner@univention.de>  Wed, 01 Oct 2014 15:34:30 +0200
+
 univention-mail-cyrus (7.0.0-2) unstable; urgency=low
 
   * added ucr template for /etc/default/cyrus-imapd (Bug #35264) 
