--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (4.1.3-3) unstable; urgency=low
+
+  * Bug #35781: Fix traceback when LDAP is not yet set up but App Center is
+    used (system-setup)
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 01 Oct 2014 16:11:21 +0200
+
 univention-management-console-module-appcenter (4.1.3-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
