* Change display type according to tree selection (Bug #35945) * Layout improvements
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54112 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.0-21) unstable; urgency=low
+
+  * Change display type according to tree selection (Bug #35945)
+  * Layout improvements 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 01 Oct 2014 16:13:21 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-20) unstable; urgency=low
 
   * Make instance detail page work with new UMC design (Bug #35945) 
