Bug #35654: move footer buttons into header buttons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54113 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/de.po
+++ b/base/univention-system-setup/umc/de.po
@@ -18,7 +18,7 @@ msgstr "UCS-Einrichtungsassistent"
 
 #: umc/setup.xml: 13
 msgid "Language settings"
-msgstr "Spracheinstellungen"
+msgstr "Sprach-Einstellungen"
 
 #: umc/setup.xml: 14
 msgid "All language relevant configurations"
@@ -42,7 +42,7 @@ msgstr "Setzen von Rechner- und Domänennamen und des root Passworts"
 
 #: umc/setup.xml: 28
 msgid "Certificate settings"
-msgstr "Zertifikateinstellungen"
+msgstr "Zertifikats-Einstellungen"
 
 #: umc/setup.xml: 29
 msgid "Create a new root certificate"
