* Bug #35654: adjust CSS rules for GalleryItems for hover/active mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54114 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.22-2) unstable; urgency=medium
+
+  * Bug #35654: adjust CSS rules for GalleryItems for hover/active mode
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 01 Oct 2014 16:25:18 +0200
+
 univention-management-console-frontend (4.1.22-1) unstable; urgency=medium
 
   * Bug #35654: minor fixes for LabelPane
