--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend-theme (0.0.26-1) unstable; urgency=medium
+
+  Bug #35654:
+  * adjust styling for moduel items overview page, add context menu
+  * remove margin for first TitlePane
+  * adjust general font styling
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 01 Oct 2014 16:31:46 +0200
+
 univention-management-console-frontend-theme (0.0.25-1) unstable; urgency=medium
 
   * Bug #35654: change order of Grid.css include to avoid import problems
