--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.28-1) unstable; urgency=medium
+
+  * Bug #35654: fix GalleryPane styling + minor CSS adjustments
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 01 Oct 2014 20:41:29 +0200
+
 univention-management-console-frontend-theme (0.0.27-1) unstable; urgency=medium
 
   * Bug #35654: adjust Dialog shadow + title bar
