--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.23-1) unstable; urgency=medium
+
+  * Bug #35654: fix LiveSearchSidebar and tools.getIconClass()
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 01 Oct 2014 20:43:09 +0200
+
 univention-management-console-frontend (4.1.22-2) unstable; urgency=medium
 
   * Bug #35654: adjust CSS rules for GalleryItems for hover/active mode
