* Bug #35654: minor style fixes, add appcenter.css file
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54130 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.4-1) unstable; urgency=medium
+
+  * Bug #35654: minor style fixes, add appcenter.css file
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 01 Oct 2014 20:47:05 +0200
+
 univention-management-console-module-appcenter (4.1.3-3) unstable; urgency=low
 
   * Bug #35781: Fix traceback when LDAP is not yet set up but App Center is
