--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.3-2) unstable; urgency=low
+
+  * Bug #35653: Add AD member mode to system setup (not working yet)
+  * Bug #35805: Add base system to system setup
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 01 Oct 2014 23:05:48 +0200
+
 univention-system-setup (8.1.3-1) unstable; urgency=low
 
   * Bug #33397: Install univention-grub before USS
