--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.3-3) unstable; urgency=low
+
+  * Bug #35805: Fix translations
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 01 Oct 2014 23:40:46 +0200
+
 univention-system-setup (8.1.3-2) unstable; urgency=low
 
   * Bug #35653: Add AD member mode to system setup (not working yet)
