--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.3-4) unstable; urgency=low
+
+  * Bug #35805: Adjustments to system-setup-boot
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 02 Oct 2014 01:56:09 +0200
+
 univention-system-setup (8.1.3-3) unstable; urgency=low
 
   * Bug #35805: Fix translations
