* Added basesystem to the roles_package_map (Bug #35805)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54137 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.4-1) unstable; urgency=medium
+
+  * Added basesystem to the roles_package_map (Bug #35805)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 02 Oct 2014 08:06:52 +0200
+
 univention-system-setup (8.1.3-4) unstable; urgency=low
 
   * Bug #35805: Adjustments to system-setup-boot
