* Change owner of LDAP configurations to root.   * Move needed UCR variables to subfiles.   * Remove useless debian/*.dirs files. (Bug #35264)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54141 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,11 @@
+univention-mail-postfix (9.0.0-6) unstable; urgency=low
+
+  * Change owner of LDAP configurations to root.
+  * Move needed UCR variables to subfiles.
+  * Remove useless debian/*.dirs files. (Bug #35264)
+
+ -- Felix Botner <botner@univention.de>  Thu, 02 Oct 2014 09:46:16 +0200
+
 univention-mail-postfix (9.0.0-5) unstable; urgency=low
 
   * added cron job for re-creating dh parameter files (Bug #35923)  
