--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (9.0.0-7) unstable; urgency=low
+
+  * remove old ucr templates (Bug #35264)
+
+ -- Felix Botner <botner@univention.de>  Thu, 02 Oct 2014 09:59:17 +0200
+
 univention-mail-postfix (9.0.0-6) unstable; urgency=low
 
   * Change owner of LDAP configurations to root.
