--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.4-2) unstable; urgency=low
+
+  * Bug #35654: fix path to appcenter.css
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 10:18:18 +0200
+
 univention-management-console-module-appcenter (4.1.4-1) unstable; urgency=medium
 
   * Bug #35654: minor style fixes, add appcenter.css file
