* Bug #35715: Role selection now has more weight in progress bar * Bug #35805: Adjustments to system-setup-boot
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54148 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.5-2) unstable; urgency=low
+
+  * Bug #35715: Role selection now has more weight in progress bar
+  * Bug #35805: Adjustments to system-setup-boot
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 02 Oct 2014 12:06:09 +0200
+
 univention-system-setup (8.1.5-1) unstable; urgency=low
 
   * Re-enable package download in system-setup-boot postinst
