--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.24-1) unstable; urgency=low
+
+  * Bug #35654: adapt overview=false mode
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 12:29:30 +0200
+
 univention-management-console-frontend (4.1.23-1) unstable; urgency=medium
 
   * Bug #35654: fix LiveSearchSidebar and tools.getIconClass()
