--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.5-3) unstable; urgency=low
+
+  * univention-system-setup-boot.postinst: generate and use a temporary
+    sources list. Packages are not copied from 'deb cdrom' (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 02 Oct 2014 13:13:19 +0200
+
 univention-system-setup (8.1.5-2) unstable; urgency=low
 
   * Bug #35715: Role selection now has more weight in progress bar
