--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.6-1) unstable; urgency=low
+
+  * Bug #35654: fix design of appliance/installer mode
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 13:49:46 +0200
+
 univention-system-setup (8.1.5-3) unstable; urgency=low
 
   * univention-system-setup-boot.postinst: generate and use a temporary
