--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.29-1) unstable; urgency=low
+
+  * Bug #35654: add styling for UMC headless mode
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 13:54:04 +0200
+
 univention-management-console-frontend-theme (0.0.28-1) unstable; urgency=medium
 
   * Bug #35654: fix GalleryPane styling + minor CSS adjustments
