* Bug #35654: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54155 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.6-2) unstable; urgency=low
+
+  * Bug #35654: fix typo
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 14:13:12 +0200
+
 univention-system-setup (8.1.6-1) unstable; urgency=low
 
   * Bug #35654: fix design of appliance/installer mode
