--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.25-1) unstable; urgency=low
+
+  * Bug #35654: fix ExpandingTitlePane
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 15:14:31 +0200
+
 univention-management-console-frontend (4.1.24-1) unstable; urgency=low
 
   * Bug #35654: adapt overview=false mode
