* Bug #35654: fix exceptions which happens after closing a ConfirmDialog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54159 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.26-1) unstable; urgency=low
+
+  * Bug #35654: fix exceptions which happens after closing a ConfirmDialog
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 15:44:49 +0200
+
 univention-management-console-frontend (4.1.25-1) unstable; urgency=low
 
   * Bug #35654: fix ExpandingTitlePane
