* Bug #35654: implement Grid.resize() and Grid.layout() - maybe this fixes some strange issues with greyed out Grid
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54161 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (4.1.27-1) unstable; urgency=low
+
+  * Bug #35654: implement Grid.resize() and Grid.layout() - maybe this fixes
+  	some strange issues with greyed out Grid
+
+ -- Florian Best <best@univention.de>  Thu, 02 Oct 2014 16:04:55 +0200
+
 univention-management-console-frontend (4.1.26-1) unstable; urgency=low
 
   * Bug #35654: fix exceptions which happens after closing a ConfirmDialog
