* Bug #35716: Allow finer grained log control in PackageManager
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54165 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.3-4) unstable; urgency=low
+
+  * Bug #35716: Allow finer grained log control in PackageManager
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Sat, 04 Oct 2014 22:57:38 +0200
+
 univention-lib (4.0.3-3) unstable; urgency=low
 
   * python-univention-lib: added a dependency to python-imaging
