* Bug #35716: Ignore log messages from postinst (et al) when installing software
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54166 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.6-5) unstable; urgency=low
+
+  * Bug #35716: Ignore log messages from postinst (et al) when installing
+    software
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Sat, 04 Oct 2014 23:07:44 +0200
+
 univention-system-setup (8.1.6-4) unstable; urgency=low
 
   * Undo univention-system-setup-boot.postinst changes and move the fix
