* Bug #35716: Adjustments for slightly new PackageManager API
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54167 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.4-3) unstable; urgency=low
+
+  * Bug #35716: Adjustments for slightly new PackageManager API
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Sun, 05 Oct 2014 01:30:05 +0200
+
 univention-management-console-module-appcenter (4.1.4-2) unstable; urgency=low
 
   * Bug #35654: fix path to appcenter.css
