* Bug #33839: Run univention-upgrade after initial join
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54169 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.6-6) unstable; urgency=low
+
+  * Bug #33839: Run univention-upgrade after initial join
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 06 Oct 2014 10:23:37 +0200
+
 univention-system-setup (8.1.6-5) unstable; urgency=low
 
   * Bug #35716: Ignore log messages from postinst (et al) when installing
