--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-diagnostic (1.0.4-2) unstable; urgency=low
+
+  * Bug #35864: Add missing dependencies
+
+ -- Florian Best <best@univention.de>  Mon, 06 Oct 2014 10:16:54 +0200
+
 univention-management-console-module-diagnostic (1.0.4-1) unstable; urgency=low
 
   * Bug #35864: adaptions to the network plugins
