--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,4 +1,10 @@
-ucs-test (5,0.14-1) unstable; urgency=low
+ucs-test (5.0.15-1) unstable; urgency=low
+
+  * Bug #35887: Re-build.
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 06 Oct 2014 12:49:40 +0200
+
+ucs-test (5.0.14-1) unstable; urgency=low
 
   * 13_indirect_group_user_memberships_file_access: give the group cache
     more time (Bug #36036)
@@ -15,10 +21,10 @@ ucs-test (5.0.13-1) unstable; urgency=low
 ucs-test (5.0.12-1) unstable; urgency=low
 
   * Bug #8052 test scripts added "*_with_special_characters" 
-  *	scripts 06_.._with_special_characters and 07_.._with_special_characters
-  *	are skipped for the current version because they fail because of Bug #35959.
+  * scripts 06_.._with_special_characters and 07_.._with_special_characters
+  * are skipped for the current version because they fail because of Bug #35959.
   * Bug #15219: test script added "102_Standard_Paketliste_installation"
-  *	which is skipped for the current version, it fails because of Bug #36006.
+  * which is skipped for the current version, it fails because of Bug #36006.
   * Bug #16053 : test script added "103_packages_held_back"
 
  -- Ammar Najjar <najjar@univention.de>  Fri, 26 Sep 2014 11:17:49 +0200
