--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.29-1) unstable; urgency=low
+
+  * Bug #35654: fix handling of headerButtons
+
+ -- Florian Best <best@univention.de>  Mon, 06 Oct 2014 14:24:52 +0200
+
 univention-management-console-frontend (4.1.28-1) unstable; urgency=medium
 
   * Bug #35654: adjust default favorite string umc/web/favorites/default
