* added examples/jenkins/utils/ad-join.py for automatically   joining an ad domain (Bug #35856)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54188 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (0.1.22-9) unstable; urgency=low
+
+  * added examples/jenkins/utils/ad-join.py for automatically 
+    joining an ad domain (Bug #35856)
+
+ -- Drees Dormann <dormann@univention.de>  Mon, 06 Oct 2014 14:53:32 +0200
+
 ucs-ec2-tools (0.1.22-8) unstable; urgency=low
 
   * utils.sh:
