--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (1.0.1-11) unstable; urgency=low
+
+  * added examples/jenkins/utils/ad-join.py for automatically
+    joining an ad domain (Bug #35856)
+
+ -- Drees Dormann <dormann@univention.de>  Mon, 06 Oct 2014 14:58:52 +0200
+
 ucs-ec2-tools (1.0.1-10) unstable; urgency=low
   * merged missing commit 53779 from 3.2-3 svn
   * python/ec2/lib.py added '-PN' to python-nmap command (Bug #35850)
