Bug #35654 * adjust grid styling * fix background position for FF * minor other fixes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54190 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend-theme (0.0.30-1) unstable; urgency=medium
+
+  Bug #35654
+  * adjust grid styling
+  * fix background position for FF
+  * minor other fixes
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 06 Oct 2014 15:25:02 +0200
+
 univention-management-console-frontend-theme (0.0.29-1) unstable; urgency=low
 
   * Bug #35654: add styling for UMC headless mode
