--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.15-2) unstable; urgency=low
+
+  * Bug #36045: Add explicit dependency on fakeroot
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 06 Oct 2014 15:41:38 +0200
+
 ucs-test (5.0.15-1) unstable; urgency=low
 
   * Bug #35887: Re-build.
