--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,15 @@
+univention-management-console-frontend-theme (0.0.32-1) unstable; urgency=medium
+
+  * Bug #35654: remove Grid background color
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 06 Oct 2014 16:06:14 +0200
+
+univention-management-console-frontend-theme (0.0.31-1) unstable; urgency=medium
+
+  * Bug #35654: make blank.png transparent
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 06 Oct 2014 15:35:51 +0200
+
 univention-management-console-frontend-theme (0.0.30-1) unstable; urgency=medium
 
   Bug #35654
