--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-22) unstable; urgency=low
+
+  * Updated texts and translations (Bug #35945)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 06 Oct 2014 16:21:44 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-21) unstable; urgency=low
 
   * Change display type according to tree selection (Bug #35945)
